--- a/app/views/layouts/_user_sidebar.html.erb
+++ b/app/views/layouts/_user_sidebar.html.erb
@@ -4,7 +4,7 @@
 <ul class="nav">
       <li><%= link_to "Фотографии",user_photos_path(current_user) %></li>
       <li><%= link_to "Сообщения",user_messages_path(current_user) %></li>
-      <li><a href="#">TechCrunch</a></li>
+      <li><%= link_to "Конкурсы",competitions_path %></li>
       <li><a href="#">GitHub</a></li>
       <li><a href="#">In1</a></li>
       <li><a href="#">TechMeMe</a></li>
