--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= ld competition.last_date %></td>
         <td><%= ld competition.open_date %></td>
         <td><%= link_to show_icon, competition %></td>
-        <td><%= link_to request_icon, aply_competition_path(competition) %></td>
+        <td><%= link_to request_icon, competition_competition_photos_path(competition) %></td>
        </tr>
     <% end %>
   </tbody>
