--- a/app/views/admin/competitions/index.html.erb
+++ b/app/views/admin/competitions/index.html.erb
@@ -20,9 +20,8 @@
         <td><%= ld competition.open_date %></td>
         <td><%= link_to(jury_icon, admin_competition_jury_index_path(competition),class: "jury_link","data-toggle" => "hello",:title =>"Жюри","data-animation" => "1") %></td>
         <td><%= link_to(nomination_icon, admin_competition_nominations_path(competition),:title =>"Номинации") %></td>
+        <td><%= link_to(photo_icon,  view_posted_admin_competition_path(competition),:title => "Фотографии") %></td>
 
-
-        
         <td><%= link_to show_icon, admin_competition_path(competition) %></td>
         <td><%= link_to edit_icon, edit_admin_competition_path(competition) %></td>
         <td><%= link_to del_icon, admin_competition_path(competition), method: :delete, data: { confirm: 'Are you sure?' } %></td>
