Фотографии не показываются в общей галерее если они участвуют в действующем конкурсе Добавлена паджинация для массивов см. initializers

--- a/app/views/competition_photos/index.html.erb
+++ b/app/views/competition_photos/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to t(:apply),aply_competition_path(@competition) %>
+<%= link_to t(:apply),aply_competition_path(@competition),{class: "btn btn-primary"} %>
 
 <h1><%= @competition.title %></h1>
 <h2>Отправленные фотографии</h2>
