--- a/app/views/admin/competitions/index.html.erb
+++ b/app/views/admin/competitions/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= competition.title %></td>
         <td><%= ld competition.last_date %></td>
-        <td><%= ld competition.open_date %></td>
+        <td><%= content_tag(:span,ld(competition.open_date),class: competition_class(competition)) %></td>
         <td><%= link_to(jury_icon, admin_competition_jury_index_path(competition),class: "jury_link","data-toggle" => "hello",:title =>"Жюри","data-animation" => "1") %></td>
         <td><%= link_to(nomination_icon, admin_competition_nominations_path(competition),:title =>"Номинации") %></td>
         <td><%= link_to(photo_icon,  view_posted_admin_competition_path(competition),:title => "Фотографии") %></td>
