--- a/app/views/admin/competitions/show.html.erb
+++ b/app/views/admin/competitions/show.html.erb
@@ -26,4 +26,4 @@
 
 
 <%= link_to 'Edit', edit_admin_competition_path(@competition) %> |
-<%= link_to 'Back', admin_competitions_path %>
+<%= link_to 'Back1', admin_competitions_path %>
