--- a/app/views/admin/nominations/_form.html.erb
+++ b/app/views/admin/nominations/_form.html.erb
@@ -9,6 +9,9 @@
     <div class="form-group">
     <%= f.input :description,:input_html => {class: "form-control"} %>
     </div>
+    <div class="form-group">
+    <%= f.input :max_photo_count,:input_html => {class: "form-control"} %>
+    </div>
 
     <%= f.button :submit,class: "btn btn-default" %>
   
