--- a/app/views/competition_photos/index.html.erb
+++ b/app/views/competition_photos/index.html.erb
@@ -5,16 +5,18 @@
 <br>
 <div class="row">
 
-    <% @competition_photos.each_with_index do |photo,index| %>
+    <% @competition_photos.each_with_index do | competition_photo,index| %>
  
     <div class="col-sm-3" style="height: 290px;">
     <div class="thumbnail">  
       <a class="thumbnail" >
-          <%= image_tag photo.image_url(:thumb),data: {src: photo.image_url(:thumb)} %>
-        </a>
+          <%= image_tag competition_photo.image_url(:thumb),data: {src: competition_photo.image_url(:thumb)} %>
+      </a>
     
     <div class="caption">
-     <small>  <%= "#{photo.title} (#{photo.nomination.title})" %>     </small>
+     <small>  <%= "#{competition_photo.title} (#{competition_photo.nomination.title})" %>     </small>
+     <br/>
+     <%= link_to del_icon, competition_competition_photo_path(@competition,competition_photo), method: :delete, data: { confirm: 'Are you sure?' } unless @competition.overdue? %>
     </div>  
     </div>
     
