Член жюри может оценивать конкурсные фото, изменения сохраняются на сервере

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,10 +2,7 @@
 
 
 
-<div class="jury_estimate">
-    <!-- in this exemple, 12 is the average and 1 is the id of the line to update in DB -->
-   <div class="basic" data-average="12" data-id="11:2" photo="12"></div>
-    
+<div class="jury_estimate" data-average="8" data-id = "2:89">
 </div>
 
 </div>
