--- a/app/assets/stylesheets/jRating.jquery.css
+++ b/app/assets/stylesheets/jRating.jquery.css
@@ -4,7 +4,7 @@
 
 /**Div containing the color of the stars */
 .jRatingAverage {
-	background-color:#f62929;
+	background-color:#ff6666;
 	position:relative;
 	top:0;
 	left:0;
@@ -32,7 +32,7 @@ p.jRatingInfos {
 	position:		absolute;
 	z-index:9999;
 	background:	transparent url('assets/bg_jRatingInfos.png') no-repeat;
-	color:			#FFF;
+	color:			red;
 	display:		none;
 	width:			91px;
 	height:			29px;	
@@ -41,6 +41,6 @@ p.jRatingInfos {
 	padding-top:5px;
 }
 	p.jRatingInfos span.maxRate {
-		color:#c9c9c9;
+		color:#666666;
 		font-size:14px;
 	}
