Добавлена возможность переключения языка

--- a/app/views/layouts/user_profile_layout.html.erb
+++ b/app/views/layouts/user_profile_layout.html.erb
@@ -35,6 +35,7 @@
             <%= render 'layouts/admin_menu' if current_user && current_user.admin? %>
            
             <%= render 'layouts/navigation' %>
+            <%= render 'layouts/lang_select' %>
            
           </ul>
           
