--- a/app/views/devise/registrations/new.ru.html.erb
+++ b/app/views/devise/registrations/new.ru.html.erb
@@ -1,11 +1,14 @@
-<h2>Форма регистрации</h2>
+<h2><%= t("sign_up") %></h2>
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical' }) do |f| %>
   <%= f.error_notification %>
   <%= display_base_errors resource %>
-  <%= f.input :name, label: "name", :autofocus => true %>
+  <%= f.input :name, :autofocus => true %>
   <%= f.input :email, :required => true %>
   <%= f.input :password, :required => true %>
   <%= f.input :password_confirmation, :required => true %>
+  <br/>
   <%= f.button :submit, 'Зарегестрироваться', :class => 'btn-primary' %>
+  <br/>
+  <br/>
 <% end %>
 <%= render "devise/shared/links" %>
