--- a/app/views/layouts/_common_menu.html.erb
+++ b/app/views/layouts/_common_menu.html.erb
@@ -1,3 +1,4 @@
-<li class="active"><%= link_to("Фотографии",gallery_index_path) %></li>
-<li><%= link_to "Конкурсы",admin_competitions_path %> </li>
-<li><%=link_to("Новости",list_novelties_path) if can? :read,Novelty %></li>
+<li class="active"><%= link_to(I18n.t("gallery"),gallery_index_path) %></li>
+<li><%= link_to I18n.t("contests"),admin_competitions_path %> </li>
+<li><%=link_to(I18n.t("news"),list_novelties_path) if can? :read,Novelty %></li>
+
