--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#"><%= I18n.t("project_name") %></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -35,7 +35,8 @@
             <%= render 'layouts/admin_menu' if current_user && current_user.admin? %>
            
             <%= render 'layouts/navigation' %>
-           
+            <%= render 'layouts/lang_select' %>
+          
           </ul>
           
         </div><!--/.navbar-collapse -->
