--- a/app/views/layouts/_user_sidebar.html.erb
+++ b/app/views/layouts/_user_sidebar.html.erb
@@ -5,7 +5,7 @@
       <li><%= link_to "Фотографии",user_photos_path(current_user) %></li>
       <li><%= link_to "Сообщения",user_messages_path(current_user) %></li>
       <li><%= link_to "Конкурсы",competitions_path %></li>
-      <li><%= link_to "Жюри",jury_choose_competition_path %></li>
+      <li><%= link_to "Жюри",jury_choose_competition_path if current_user.in_jury? %></li>
       <li><a href="#">In1</a></li>
       <li><a href="#">TechMeMe</a></li>
 </ul>
