Добавлена возможность расставления спорных мест.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -58,4 +58,4 @@
         }
         /* not required for sticky footer; just pushes hero down a bit */
         
-    
+    .center {display:block; margin:0 auto;}
