--- a/app/views/gallery/show.html.erb
+++ b/app/views/gallery/show.html.erb
@@ -5,13 +5,13 @@
 
 <p>
   
-  <%= image_tag @photo.image_url(:normal) %>
+  <%= image_tag @photo.image_url(:normal),class: "center" %>
 </p>
 
 <hr/>
 
 
-<h4>Comments</h4>
+<h4><%=  t("comments")%></h4>
 
 <% @photo.comments.each do |c| %>
 
@@ -32,12 +32,12 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :comment,placeholder: 'Напиши комментарий',:input_html => {:style => "width: 500px"}  %>
+    <%= f.input :comment,placeholder: 'Здесь можно что-нибудь написать',:input_html => {:style => "width: 500px"}  %>
     <%= f.input :commentable, :as => :hidden, :input_html => { :value => "photo"  }  %>
   </div>
-
+  <br>
  
-    <%= f.button :submit, :class => "btn btn-default" %>
+    <%= f.submit t(:save), :class => "btn btn-default" %>
  
 <% end %>
 
