--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -23,7 +23,7 @@
         <td><%= ld competition.open_date %></td>
         <td><%= link_to(photo_icon,  view_photos_competition_path(competition),:title => "Фотографии") %></td>
         <td><%= link_to show_icon, competition %></td>
-        <td><%= link_to request_icon, competition_competition_photos_path(competition) %></td>
+        <td><%= link_to request_icon, competition_competition_photos_path(competition) if can?(:view,Competition) %></td>
        </tr>
     <% end %>
   </tbody>
