--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -28,20 +28,8 @@
 <hr/>
 
 
-<%= simple_form_for([current_user,@photo,Comment.new]) do |f| %>
-  <%= f.error_notification %>
+<%= render partial: "comment/form", locals: { user: current_user, photo: @photo} %>
 
-    <div class="form-group">
-    <%= f.input :comment,placeholder: 'Напиши комментарий',:input_html => {class: "form-control"}  %>
-    </div>
-     <div class="form-group">
-    <%= f.input :commentable, :as => :hidden, :input_html => { :value => "photo" }  %>
-    </div>
- 
-
-    <%= f.button :submit,class: "btn btn-default" %>
-
-<% end %>
 <br>
 
 
