--- a/app/views/layouts/user_profile_layout.html.erb
+++ b/app/views/layouts/user_profile_layout.html.erb
@@ -15,7 +15,7 @@
 
   </head>
 
-  <body>
+ <body style="margin-top: 70px">
 
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
