--- a/app/views/layouts/_moder_menu.html
+++ b/app/views/layouts/_moder_menu.html
@@ -2,10 +2,11 @@
   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Модерация<b class="caret"></b></a>
  
   <ul class="dropdown-menu">
-    <li><a href="#"><%=link_to("Новости",novelties_path) if can? :read,Novelty %></a></li>
-    <li><a href="#"><%=link_to "Переписка",admin_messages_path if can? :manage,Message %></a></li>
-    <li><a href="#"><%=link_to "Фотографии",admin_photos_path if can? :manage,Photo %>  </li>
+    <li><%=link_to("Новости",novelties_path) if can? :read,Novelty %></li>
+    <li><%=link_to "Переписка",admin_messages_path if can? :manage,Message %></li>
+    <li><%=link_to "Фотографии",admin_photos_path if can? :manage,Photo %>  </li>
    
   </ul>
 
 </li>
+
