--- a/app/views/layouts/moder_photo_layout.html.erb
+++ b/app/views/layouts/moder_photo_layout.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
     <title><%= content_for?(:title) ? yield(:title) : "Photohome" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Photohome" %>">
     <%= stylesheet_link_tag "application", :media => "all" %>
@@ -15,7 +15,7 @@
 
   </head>
 
-  <body style="margin-top: 70px">
+  <body style="margin-top: 270px">
 
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><%= I18n.t("project_name") %></a>
+            <%=  link_to(I18n.t("project_name"),root_path,class: "navbar-brand") %>
         </div>
          <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
