Добавлены хлебные крошки в конкурсы. Раздел новостей перенесен в админ контроллер.

--- a/app/views/competition_photos/index.html.erb
+++ b/app/views/competition_photos/index.html.erb
@@ -1,3 +1,5 @@
+<% breadcrumb :competition_photos, @competition %>
+
 <%= link_to t(:apply),aply_competition_path(@competition),{class: "btn btn-primary"} %>
 
 <h1><%= @competition.title %></h1>
