--- a/app/views/competitions/aply.html.erb
+++ b/app/views/competitions/aply.html.erb
@@ -1,3 +1,5 @@
+<% breadcrumb :aply_competition_photos, @competition %>
+
 <h1><%= t(".choose_photo_title") %></h1>
 <%= simple_form_for([@competition,@competition_photo]) do |f| %>
   <%= f.error_notification %>
