--- a/app/views/layouts/_common_menu.html.erb
+++ b/app/views/layouts/_common_menu.html.erb
@@ -1,4 +1,10 @@
-<li class="active"><%= link_to(I18n.t("gallery"),gallery_index_path) %></li>
-<li><%= link_to I18n.t("contests"),competitions_path %> </li>
-<li><%=link_to(I18n.t("news"),list_novelties_path) if can? :read,Novelty %></li>
 
+<li class= <%= "active" if params[:controller] == "gallery" %>>
+<%= link_to(I18n.t("gallery"),gallery_index_path) %>
+</li>
+<li class= <%= "active" if params[:controller] == "competitions" ||  params[:controller] == "competition_photos"%>>
+  <%= link_to I18n.t("contests"),competitions_path %>
+ </li>
+<li class= <%= "active" if params[:controller] == "novelties" %>>
+  <%=link_to(I18n.t("news"),list_novelties_path) if can? :read,Novelty %>
+</li>
