--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,9 @@
     </div>
 
     <div class="container">
+      <%= breadcrumbs  :separator => " &rsaquo; " %>
+      <br>
+    <%= params[:controller] %>
       <%=render 'layouts/messages'%>
       <%= yield %>
     </div><!-- /.container -->
