--- a/app/views/competitions/view_photos.html.erb
+++ b/app/views/competitions/view_photos.html.erb
@@ -1,4 +1,6 @@
 <% breadcrumb :view_competition_photos, @competition %>
+<br>
+<%= link_to "Положение о конкурсе", competition_path(@competition) %>
 
 <h1>Конкурсные фотографии</h1>
 <br>
