--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -9,10 +9,10 @@
 
     <% @last_photos.each_with_index do |photo,index| %>
   
-    <div class="col-sm-3" style="height: 290px;">
+    <div class="col-sm-3" >
     <div class="thumbnail">  
       <a href=<%= gallery_show_path(photo) %> class="thumbnail" >
-          <%= image_tag photo.image_url(:thumb),data: {src: photo.image_url(:thumb)} %>
+          <%= image_tag photo.image_url(:thumb),style: "height: 150px;" %>
         </a>
     
     <div class="caption">
