--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
   </head>
 
-  <body style="margin-top: 70px">
+  <body style="margin-top: 70px;">
 
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
