--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -1,14 +1,17 @@
+
+
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Управление<b class="caret"></b></a>
  
   <ul class="dropdown-menu">
+    <li class="dropdown-header">Модерация</li>
+    <%= render 'layouts/moder_menu' if current_user && current_user.is_stuff? %>
+    
+    <li class="dropdown-header">Администрирование</li>
     <li><%= link_to 'Пользователи', users_path if current_user && current_user.admin? %></li>
     <li><%= link_to 'Темы', topics_path %></li>
     <li><%= link_to "Конкурсы",admin_competitions_path %></li>
-    <li class="divider"></li>
-    <li class="dropdown-header">Nav header</li>
-    <li><a href="#">Separated link</a></li>
-    <li><a href="#">One more separated link</a></li>
+    
   </ul>
 
 </li>
