Баг с сохранением имени в модели пользователя

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
            
             <%= render 'layouts/common_menu' %>
          
-            <%= render 'layouts/admin_menu' if current_user && current_user.admin? %>
+            <%= render 'layouts/admin_menu' if current_user && current_user.is_stuff? %>
             <%= render 'layouts/navigation' %>
             <%= render 'layouts/lang_select' %>
           
