--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,6 +3,12 @@
   <%= f.error_notification %>
   <%= display_base_errors resource %>
   <%= f.input :name %>
+  <%= f.input :last_name, :autofocus => true, :required => true %>
+  <%= f.input :adress, :autofocus => true, :required => true %>
+  <%= f.input :zip_code, :autofocus => true, :required => true %>
+  <%= f.input :city, :autofocus => true, :required => true %>
+  <%= f.input :country, :autofocus => true, :required => true %>
+  <%= f.input :phone, :autofocus => true %>
   <%= f.input :email, :required => true %>
   <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
   <%= f.input :password_confirmation, :required => false %>
