Добавлена работа с фотографиями сайта (загрузка и импорт фотографий пользователей)

--- a/app/views/admin/albums/index.html.erb
+++ b/app/views/admin/albums/index.html.erb
@@ -3,7 +3,7 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= t('.title') %></th>
+      <th><%= t('.name') %></th>
     
       <th></th>
       <th></th>
@@ -25,4 +25,4 @@
 
 <br>
 
-<%= link_to t('.new_album'), new_admin_album_path,{class: "btn btn-primary"}%>
+<%= link_to t('.new'), new_admin_album_path,{class: "btn btn-primary"}%>
