--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -12,12 +12,19 @@
     <div class="col-sm-3" >
     <div class="thumbnail">  
       <a href=<%= gallery_show_path(photo) %> class="thumbnail" >
+
           <%= image_tag photo.image_url(:thumb),style: "height: 150px;" %>
+      
       </a>
     
     <div class="caption">
-     <small>  <%= photo.title %>     </small>
+     <small> <%= photo.title %> </small>
+     <span style = "float: right">  
+      <%= link_to plus_icon, admin_choose_site_photo_path(photo.id) if is_stuff? %>
+     </span>
     </div>  
+
+
     </div>
     
     
