--- a/app/views/layouts/_moder_menu.html
+++ b/app/views/layouts/_moder_menu.html
@@ -3,3 +3,4 @@
 <li><%=link_to "Фотографии",admin_photos_path if can? :manage,Photo %>  </li>
 
 <li><%=link_to "Альбомы", admin_albums_path if can? :manage, Admin::Album %>  </li>
+<li><%=link_to "Галлерея", admin_site_photos_path if can? :manage, Admin::SitePhoto %>  </li>
