--- a/app/views/admin/albums/show.html.erb
+++ b/app/views/admin/albums/show.html.erb
@@ -1,14 +1,25 @@
-<p id="notice"><%= notice %></p>
+<h1><%= @album.title %></h1>
+<br>
 
-<p>
-  <strong>Name:</strong>
-  <%= @topic.name %>
-</p>
+<div class="row">
 
-<p>
-  <strong>Content:</strong>
-  <%= @topic.content %>
-</p>
+    <% @album.site_photos.each_with_index do |photo,index| %>
+  
+    <div class="col-sm-3" >
+  
+    <div class="thumbnail">  
+     
+      <%= render partial: "photos/thumb", locals: { photo: photo, path: admin_site_photo_path(photo) } %>
+      <%- l1 = link_to del_icon, admin_site_photo_path(photo.id), method: :delete, data: { confirm: 'Are you sure?' } if is_stuff? %>
+      <%= render partial: "photos/caption", locals: { photo: photo, links: [l1] } %>
 
-<%= link_to 'Edit', edit_topic_path(@topic) %> |
-<%= link_to 'Back', topics_path %>
+     
+    </div>
+    
+    
+    
+  </div>
+
+  <% end %>
+  
+</div>
