--- a/app/views/admin/site_photos/index.html.erb
+++ b/app/views/admin/site_photos/index.html.erb
@@ -11,27 +11,17 @@
     <% @site_photos.each_with_index do |photo,index| %>
   
     <div class="col-sm-3" >
-    
-
     <div class="thumbnail">  
-      <a href=<%= admin_site_photo_path(photo) %> class="thumbnail" >
-          <%= image_tag photo.picture_url(:thumb),style: "height: 150px;" %>
-      </a>
     
-    <div class="caption">
-     <small>  <%= photo.title %>     </small>
-     <span style = "float: right">  
-      
-      <%=link_to del_icon, admin_site_photo_path(photo.id), method: :delete, data: { confirm: 'Are you sure?' } if is_stuff?%> 
-     </span>
-    </div>  
+    <%= render partial: "photos/thumb", locals: { photo: photo, path: admin_site_photo_path(photo) } %>
+    <%- l1 = link_to del_icon, admin_site_photo_path(photo.id), method: :delete, data: { confirm: 'Are you sure?' } if is_stuff? %>
+    <%= render partial: "photos/caption", locals: { photo: photo, links: [l1] } %>
      
     </div>
-    
-    
-    
+   
   </div>
 
   <% end %>
   
 </div>
+
