--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,33 +1,5 @@
-<p>
-  <strong>Название:</strong>
-  <%= @photo.title %>
-</p>
-
-<p>
-  
-  <%= image_tag @photo.image_url(:normal) %>
-</p>
-
-<hr/>
-
-
-<h4><%= t("comments") %></h4>
-
-<% @photo.comments.each do |c| %>
-
-<div>
-   <%= image_tag(c.user.avatar_url(:thumb),class: "img-polaroid",style: "float: left;margin-right: 5px;") %> 
-  <div><%= c.comment %></div>
-</div>
- <%= link_to del_icon, [current_user,@photo,c], method: :delete, data: { confirm: 'Are you sure?' } if can? :destroy,c%>
-
-<div style="clear: left; height: 20px;" ></div>
-
-<% end %>
-
-<hr/>
-
-
+<%= render partial: "image", locals: {photo: @photo } %>
+<%= render partial: "comment/comments", locals: {comments: @photo.comments } %>
 <%= render partial: "comment/form", locals: { user: current_user, photo: @photo} %>
 
 <br>
