--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,14 @@
 <div class="span20">
 
-
+<% if @photos  %>
 <div class="fotorama" data-autoplay="true" data-shuffle="true" style="width: 50%; margin: 0 auto;">
    <% @photos.each do |photo| %>
     <%= image_tag(photo.image_url(:normal)) %>
   <% end %> %>
 
 </div>
+
+<% end %>
 
 
 
