--- a/app/views/layouts/moder_photo_layout.html.erb
+++ b/app/views/layouts/moder_photo_layout.html.erb
@@ -46,9 +46,15 @@
       <%=render 'layouts/messages'%>
       <div class="col-md-2"><%= render 'layouts/moder_photo_sidebar' %></div>
       <div class="col-md-10"><%= yield%> </div>
+
+      <div class="push"><!--//--></div>
     </div><!-- /.container -->
 
-
+  <div id="footer">
+      <div class="container">
+        <p class="muted credit">Copiright 2013 </p>
+      </div>
+  </div>
   
   </body>
 </html>
