--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -58,4 +58,10 @@
         }
         /* not required for sticky footer; just pushes hero down a bit */
         
-    .center {display:block; margin:0 auto;}
+    /*.center {display:block; margin:0 auto;}*/
+
+    .center {
+     float: none;
+     margin-left: auto;
+     margin-right: auto;
+}
