--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,6 +48,11 @@
     </div><!-- /.container -->
 
 
+  <div id="footer">
+      <div class="container">
+        <p class="muted credit">Copiright 2013 </p>
+      </div>
+  </div>
   
   </body>
 </html>
