--- a/app/views/layouts/user_profile_layout.html.erb
+++ b/app/views/layouts/user_profile_layout.html.erb
@@ -45,7 +45,7 @@
     
 
     
-<div class="wrapper">
+
 
     <div class="container">
       <%=render 'layouts/messages'%>
@@ -53,17 +53,14 @@
       <div class="col-md-10"><%= yield%> </div>
     </div>
 
-      <hr>
+  
+  
 
-<div class="push"><!--//--></div>
-    </div>
-
-      <footer>
-        <p>&copy; Company 2013</p>
-      </footer>
-    </div> <!-- /container -->
-
-
+  <div id="footer">
+      <div class="container">
+        <p class="muted credit">Copiright 2013 </p>
+      </div>
+  </div>
     
 
 
