Check if random article has class Admin::Article

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
   <div class="fotorama" data-autoplay="true" data-shuffle="true" >
      <% @photos.each do |photo| %>
       <%= image_tag(photo.image_url(:normal)) %>
-     <% end %> %>
+     <% end %> 
   </div>
 
   <% end %>
