Change carousel to flexslider

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,7 +13,8 @@
  *= require jquery.ui.all
  *= require token-input-facebook
  *= require redactor-rails
- *= require fotorama
+ *= require flexslider.css
+
  */
 
 
